Fixing an It2Me host crash on debug builds on Windows

While working on an different It2Me work item I noticed that every time I tried
to connect the host would crash with an error: "Function marked as IO-only was
called from a thread that disallows IO!...".

After some investigation I found that the It2Me host attempts to create the
TouchInputInjector (which loads a DLL) on its network thread causing the DCHECK
crash.  The Me2Me host creates this object on its UI thread which is also where
the injector is initialized so my fix is to move the creation of the
TouchInputInjector to the UI thread as well so we can guarantee it does not
occur on an invalid thread.

BUG=609639

Review-Url: https://codereview.chromium.org/1949113005
Cr-Commit-Position: refs/heads/master@{#392117}